# auswahl

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
auswahl/: __init__.py  _base.py  _bipls.py  _cars.py  _dummy.py  _fipls.py  _foss.py  _ipls.py  _mcuve.py  _pseudo_interval.py  _random_frog.py  _spa.py  _vip.py  _vip_spa.py  _vissa.py
auswahl/benchmarking/: __init__.py  _benchmarking.py
auswahl/tests/: _test_pseudo_interval_selector.py  test_bipls.py  test_cars.py  test_common.py  test_fipls.py  test_interval_optimization.py  test_ipls.py  test_irf.py  test_mcuve.py  test_random_frog.py  test_spa.py  test_vip.py  test_vissa.py
auswahl/util/: __init__.py  _optimization.py  _pls_utils.py
benchmark/: __init__.py  _benchmarking.py
benchmark/tests/: test_exceptions.py
doc/: adding_selectors.rst  api.rst  benchmarking.rst  conf.py  index.rst  installation.rst  interval_selection.rst  point_selection.rst  quick_start.rst  quickstart.rst  user_guide.rst
examples/: README.rst  benchmakring_new.py  benchmarking.py  benchmarking_demo.py  dump.pickle  error_log.txt  example_test.py  plot_benchmark_results.py  plot_bipls_two_features.py  plot_cars_two_features.py  plot_fipls_two_features  plot_fipls_two_features.py  plot_ipls_two_features.py  plot_irf_two_features.py  plot_mcuve_two_features.py  plot_rf_two_features.py  plot_spa_features.py  plot_vip_threshold.py  plot_vip_two_features.py  plot_vissa_two_features.py  pod.pickle  regression_means.csv
(+30 files in other folders)
