[metadata]
name = auswahl
version = attr: auswahl.__version__
description = Collection of Feature Selection Methods for Near-Infrared Spectroscopy
long_description = file: README.rst
url = https://github.com/mcFloskel/auswahl
maintainer = Florian Buckermann, Stefan Heil
licence = MIT
description_file = README.rst

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8
packages = find:
install_requires =
    numpy
    scipy
    scikit-learn
    pandas
    joblib
    matplotlib

[options.extras_require]
tests =
    pytest
    pytest-cov
docs =
    sphinx
    sphinx-gallery
    sphinx_rtd_theme
    numpydoc
    matplotlib

[aliases]
test = pytest

[tool:pytest]
addopts = --doctest-modules
testpaths = auswahl
doctest_optionflags = NORMALIZE_WHITESPACE
